# tadatakit

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
examples/: README.md  dma_tg.ipynb  enthalpy_calculation.ipynb  examples.md  file_downloader.py  intro_to_the_schema.ipynb  kinetics.ipynb  plotting.ipynb  rheology_crossover.ipynb  rheology_mayo.ipynb  sa_wood.ipynb  sdt_enthalpy.ipynb  tga_weight_loss.ipynb  tma_cte.ipynb  xml.ipynb
schema/: TADataSchema.json
tadatakit/analysis/: abstract_class.py  algorithms.py
tadatakit/class_generator/: __init__.py  base_class.py  base_classes.py  class_registry.py  common_utils.py  definition_registry.py  factory.py  factory_utils.py  initialise_classes.py  polymorph_factory.py  populate_classes.py  schema_loader.py  schema_object.py  utils.py
tadatakit/classes/: __init__.py
tests/: test_class_generator_base_class.py  test_class_generator_base_classes.py  test_class_generator_common_utils.py  test_class_generator_definition_registry.py  test_class_generator_factory.py  test_class_generator_factory_utils.py  test_class_generator_polymorph_factory.py  test_class_generator_schema_object.py  test_class_generator_utils.py  test_classes__init__.py  test_schema.json  test_tadatakit.py
tests/test_classes_data/: dataset.json  expected.json
