[tool.poetry]
name = "tadatakit"
version = "0.1.0"
description = ""
authors = ["Stuart Cook <stuart_cook@waters.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pandas = "^2.1.4"
tainstrumentstriosdataschema = {version = "^0.0.11", source = "pypi-test"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^3.5.0"
black = "^23.11.0"
flake8 = "^6.1.0"
ipython= "<8.13"
jupyterlab = "^4.0.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[[tool.poetry.source]]
name = "pypi-test"
url = "https://test.pypi.org/simple/"
default = false
secondary = true