[tool.poetry]
name = "tadatakit"
version = "0.1.1"
description = "A Python library for parsing and handling data exported by TA Instruments' TRIOS JSON Export"
authors = ["Stuart Cook <stuart_cook@waters.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://www.tainstruments.com/"
repository = "https://github.com/TA-Instruments/tadatakit"
keywords = ["TA Instruments", "TRIOS", "JSON", "data parsing", "data analysis", "materials science", "DSC", "TGA", "rheology"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pandas = "^2.1.4"
tainstruments-triosdataschema = "0.1.17"

[tool.poetry.dev-dependencies]
pytest = "^8.0"
pytest-mock = "^3.14.0"
pre-commit = "^3.5.0"
black = "^23.11.0"
flake8 = "^6.1.0"
ipython= "<8.13"
jupyterlab = "^4.0.9"
matplotlib = "^3.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''